# stellar-upgrader-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml  stellar-plugin.json
.github/workflows/: ci.yaml  cla.yml
examples/: upgrade_example.sh
src/: lib.rs  main.rs
src/security_checks/: constructor_check.rs  contract_info.rs  mod.rs  upgrade_function_check.rs  version_check.rs
src/security_checks/tests/: mod.rs
